uplink-hub/k8s/overlays/production/ingress.yaml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-production    
spec:
  tls:
  - hosts:
    - hub.uplink.wtf
    secretName: production-tls
  rules:
  - host: hub.uplink.wtf
    http:
      paths:
      - path: /api/auth/
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8080
      - path: /api/graphql
        pathType: Prefix
        backend:
          service:
            name: router
            port:
              number: 8080
